# Energy-Fraud-Detection-System-based-on-Deep-Learning

./: .gitignore  LICENSE  README.md  pyproject.toml
data/combined_embeddings/all_clusters/: combined_embeddings.npy
data/combined_embeddings/only_regular/: combined_embeddings.npy
data/embeddings/all_clusters/: ANAGRAFICA_embeddings.npy  CONSUMI_embeddings.npy  INTERRUZIONI_embeddings.npy  LAVORI_embeddings.npy  PAROLE_DI_STATO_embeddings.npy
data/embeddings/only_regular/: ANAGRAFICA_embeddings.npy  CONSUMI_embeddings.npy  INTERRUZIONI_embeddings.npy  LAVORI_embeddings.npy  PAROLE_DI_STATO_embeddings.npy
models/Autoencoder/all_clusters/: ANAGRAFICA_autoencoder_model.pth  CONSUMI_autoencoder_model.pth  INTERRUZIONI_autoencoder_model.pth  LAVORI_autoencoder_model.pth  PAROLE_DI_STATO_autoencoder_model.pth
models/Autoencoder/only_regular/: ANAGRAFICA_autoencoder_model.pth  CONSUMI_autoencoder_model.pth  INTERRUZIONI_autoencoder_model.pth  LAVORI_autoencoder_model.pth  PAROLE_DI_STATO_autoencoder_model.pth
models/DNN/all_clusters/: dnn_model_fold_0.pth  dnn_model_fold_1.pth  dnn_model_fold_2.pth  dnn_model_fold_3.pth  dnn_model_fold_4.pth
models/DNN/only_regular/: dnn_model_fold_0.pth  dnn_model_fold_1.pth  dnn_model_fold_2.pth  dnn_model_fold_3.pth
notebooks/: 1.0-de-initial-data-exploration.ipynb
src/: __init__.py  binary_classifiers.py  data_processing.py  embedding_generator.py  evaluation.py  pipeline.py  training_orchestrator.py  utils.py
src/features/: build_features.py
src/models/: combine.py  config.py  trainers.py
src/models/DNN/: models.py
(+28 files in other folders)
